--- a/components/states/States.css
+++ b/components/states/States.css
@@ -4,3 +4,42 @@ CSS for the Project 4, Problem 2 States component
 Since CSS uses a global name space for classes we should use names starting with
 states- here.
 */
+
+.states-container {
+    font-family: Arial, Helvetica, sans-serif;
+    max-width: 400px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.states-container input{
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.filtered-substring {
+    font-style: italic;
+    margin-bottom: 10px;
+  }
+  
+  /* Style for the list of states */
+.state-list {
+    list-style: none;
+    padding: 0;
+  }
+  
+  /* Style for list items */
+.state-list li {
+    padding: 5px 0;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  /* Style for the "No matching states found" message */
+.state-list p {
+    color: #888;
+    font-style: italic;
+  }
+  
