--- a/components/example/Example.css
+++ b/components/example/Example.css
@@ -4,8 +4,14 @@ CSS for the example component.
 Since CSS uses a global name space for classes we use a naming convention that includes the
 React application and the component in the class name.  The hope is any other stylesheets
 you use won't conflict with these names.
+/*
+CSS for the example component.
+
+Since CSS uses a global name space for classes we use a naming convention that includes the
+React application and the component in the class name.  The hope is any other stylesheets
+you use won't conflict with these names.
 */
-.motto-update {
+.example-code {
   font-family: Courier New, monospace;
   line-height: 1.3;
   padding-top: 20px;
@@ -19,16 +25,22 @@ you use won't conflict with these names.
   overflow-x: auto;
 }
 
-.motto-update {
+.example-output {
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 10px;
   padding-right: 10px;
-  border: 1px dashed #722b00;
+  border: 10px dotted #722b00;
   display: inline-block;
   box-sizing: border-box;
 }
 
-.motto-update {
+.code-name {
   font-family: Courier New, monospace;
+}
+
+.motto-update {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 16pt;
+  color: darkred;
 }
