--- a/components/states/States.css
+++ b/components/states/States.css
@@ -1,45 +1,18 @@
-/*
-CSS for the Project 4, Problem 2 States component
-
-Since CSS uses a global name space for classes we should use names starting with
-states- here.
-*/
-
-.states-container {
-    font-family: Arial, Helvetica, sans-serif;
-    max-width: 400px;
-    margin: 0 auto;
-    text-align: center;
+ul {
+  background: gainsboro;
+  padding: 20px;
+  list-style-type: circle;
 }
 
-.states-container input{
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
+ul li {
+  margin-bottom: 5px;
+  background-color: #fff;
+  color: darkblue;
+  padding: 8px;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+} 
 
-.filtered-substring {
-    font-style: italic;
-    margin-bottom: 10px;
-  }
-  
-  /* Style for the list of states */
-.state-list {
-    list-style: none;
-    padding: 0;
-  }
-  
-  /* Style for list items */
-.state-list li {
-    padding: 5px 0;
-    border-bottom: 1px solid #ccc;
-  }
-  
-  /* Style for the "No matching states found" message */
-.state-list p {
-    color: #888;
-    font-style: italic;
-  }
+
   
